@@ -39,6 +39,7 @@
 #include "config.h"
 #endif
 
+#include <stddef.h>	/* UINT_MAX */
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
@@ -56,6 +57,10 @@
 #include <pwd.h>
 #endif
 #include <locale.h>
+#ifdef HAVE_ZLIB_H
+#include <zlib.h>
+#define	ZLIB_IN_MAX	UINT_MAX	/* maximum size zlib can read at once */
+#endif
 
 #include "fig2dev.h"	/* includes bool.h and object.h */
 //#include "object.h"	/* includes X11/xpm.h; NUMSHADES, NUMTINTS */
@@ -302,6 +307,284 @@ static	 struct hdr {
 /******************************/
 /* various methods start here */
 /******************************/
+
+/***** ASCII85 Encoding *****/
+
+/*
+ * Convert the next four bytes, writing five chars.
+ */
+static int
+convertfourbytes(FILE *out, unsigned char *in)
+{
+	const unsigned long	power85[4] = {85L*85*85*85, 85L*85*85, 85L*85,
+						85L};
+	int			i, o;
+	unsigned long		word;
+
+	word = ((unsigned long)(((unsigned int)(*in) << 8) + *(in+1)) << 16) +
+		(((unsigned int)(*(in+2)) << 8) + *(in+3));
+	if (word == 0) {
+		fputc('z', out);
+		return 1;
+	} else {
+		for (i = 0; i < 4; ++i) {
+			o = (char)(word / power85[i]);
+			word -= o * power85[i];
+			fputc(o + '!', out);
+		}
+		fputc(word + '!', out);
+		return 5;
+	}
+}
+
+/*
+ * Convert the remaining 1 to 3 bytes.
+ */
+static void
+convertremainder(FILE *out, unsigned char *in, unsigned len)
+{
+	const unsigned long	power85[4] = {85L*85*85*85, 85L*85*85, 85L*85,
+						85L};
+	int			o;
+	unsigned		i;
+	unsigned long		word;
+
+
+	word = (unsigned long)(*in) << 24;
+	for (i = 1; i < len; ++i)
+		word += (unsigned long)(*(in+i)) << 8 * (3 - i);
+	for (i = 0; i < len + 1; ++i) {
+		o = (int)(word / power85[i]);
+		word -= o * power85[i];
+		fputc(o + '!', out);
+	}
+}
+
+/*
+ * FIXME: Same signature for ascii85encode, deflate_ascii85encode
+ *		- no need for bytes_per_line
+ *		- remove pic->file from deflate_ascii
+ *		- add pic->file to error message
+ *		- enable indexed images without zlib
+ */
+
+static void
+ascii85encode(FILE *out, unsigned char *in, size_t len)
+{
+	size_t		i, n;
+	size_t		lines;
+				/* this yields 16 * 5 = 80 chars in a line */
+	const size_t	bytes_per_line = 16 * 4;
+
+	/* write full lines */
+	lines = len / bytes_per_line;
+	for (n = 0; n < lines; ++n) {
+		for (i = 0; i < 16; ++i)
+			convertfourbytes(out, in + n * bytes_per_line + i * 4);
+		fputc('\n', out);
+		if (ferror(out)) {
+			err_msg("Error writing one line of encoded data");
+			exit(EXIT_FAILURE);
+		}
+	}
+
+	/* quick return */
+	if ((n = len - lines * bytes_per_line) == 0)
+		return;
+
+	/* write remaining groups of four */
+	for (i = 0; i < n / 4; ++i)
+		convertfourbytes(out, in + lines * bytes_per_line + i * 4);
+
+	/* write remainder */
+	if ((n -= i * 4) > 0)
+		convertremainder(out, in + lines * bytes_per_line + i * 4, n);
+
+	if (ferror(out)) {
+		err_msg("Error writing encoded data");
+		exit(EXIT_FAILURE);
+	}
+}
+
+#ifdef HAVE_ZLIB_H
+/*
+ * Write the deflated and ascii85 encoded bitmap data to out.
+ */
+static int
+deflate_ascii85encode(FILE *out, F_pic *pic)
+{
+	int		ret;
+	int		flush;
+	int		bytes_per_pixel;
+	size_t		avail_in;
+	z_stream	strm;
+	unsigned char	buf[16384]; /* IMPORTANT, that this is a multiple of 4!
+				     * Nice, if a multiple of 16*4, see above */
+
+	if (pic->numcols >256)
+		bytes_per_pixel = 3;
+	else
+		bytes_per_pixel = 1;
+
+	/*
+	 * Initialize the zlib state object.
+	 * See zlib.h and the example zpipe.c.
+	 */
+	strm.zalloc = Z_NULL;	/* Have zlib use the standard system malloc().*/
+	strm.zfree = Z_NULL;	/* Have zlib use the standard system free(). */
+	strm.opaque = Z_NULL;	/* Not used, passed to zalloc() and zfree(). */
+	ret = deflateInit2(&strm,
+			Z_BEST_COMPRESSION,	/* 0 - 9, default 6 */
+			Z_DEFLATED,		/* method, must be Z_DEFLATED */
+			MAX_WBITS,		/* window size, max here */
+			MAX_MEM_LEVEL,		/* allocated memory for compr.*/
+			Z_RLE); /* compression strategy used for png data */
+	if (ret != Z_OK) {
+		put_msg("Unable to initialize compression of image %s.\n"
+				"Zlib error = %d", pic->file, ret);
+		return ret;
+	}
+
+	/* Assign input and output for compression. */
+	strm.next_in = pic->bitmap;
+	strm.next_out = buf;
+	strm.avail_out = (unsigned) sizeof buf;
+
+	/*
+	 * strm.avail_in is of type unsigned int, hence it can hold a maximum
+	 * number of UINT_MAX (= ZLIB_IN_MAX, see above), equal 4 GiB. */
+	avail_in = pic->bit_size.x * pic->bit_size.y * bytes_per_pixel;
+	if (avail_in > ZLIB_IN_MAX) {
+		flush = Z_NO_FLUSH;
+		strm.avail_in = ZLIB_IN_MAX;
+		avail_in -= strm.avail_in;
+	} else {
+		flush = Z_FINISH;
+		strm.avail_in = avail_in;
+	}
+
+	/*
+	 * Start compression.
+	 * Loop, as long as the output buffer can be completely filled.
+	 * This rests on the assumption that deflate() writes a number of
+	 * completely filled output buffers, and only the last one is probably
+	 * partially filled.
+	 */
+	while ((ret = deflate(&strm, flush)) == Z_OK && strm.avail_out == 0){
+		ascii85encode(out, buf, sizeof buf);
+		strm.avail_out = (unsigned) sizeof buf;
+		strm.next_out = buf;
+		if (flush != Z_FINISH) {
+			unsigned	possible = ZLIB_IN_MAX - strm.avail_in;
+			if (possible > avail_in) {
+				strm.avail_in += avail_in;
+				flush = Z_FINISH;
+			} else {
+				strm.avail_in = ZLIB_IN_MAX;
+				avail_in -= possible;
+			}
+		}
+	}
+	if (ret == Z_STREAM_ERROR) {
+		if (strm.msg)
+			put_msg("Error while compressing image %s: %s",
+					pic->file, strm.msg);
+		else
+			put_msg("Error while compressing image %s.", pic->file);
+		return -2;
+	}
+	if (ret == Z_BUF_ERROR && strm.avail_out == 0) {
+		put_msg("An unexpected error occured, avail_out == 0 && "
+			"ret == Z_BUF_ERROR. Please report this error.");
+	}
+	/* output the remainder */
+	if (ret == Z_STREAM_END && strm.avail_out != 0)
+		ascii85encode(out, buf, sizeof buf - strm.avail_out);
+
+	/* clean up */
+	if (deflateEnd(&strm) != Z_OK) {
+		if (strm.msg)
+			put_msg("An error occurred after compression of image "
+					"%s:\n  %s.", pic->file, strm.msg);
+		else
+			put_msg("An error occurred after compression of "
+					"image %s.", pic->file);
+	}
+	return 0;
+}
+#endif	/* HAVE_ZLIB_H */
+
+/*
+ * the image dictionary string is needed two times,
+ * here and in indexed_image() below
+ */
+#ifdef HAVE_ZLIB_H
+#define DATASOURCE	"    /DataSource Data /FlateDecode filter\n"
+#else
+#define DATASOURCE	"    /DataSource Data\n"
+#endif
+
+static void
+write_rgbimage(FILE *out, F_pic *pic)
+{
+	fprintf(out,
+		"/Data currentfile /ASCII85Decode filter def\n"
+		"/DeviceRGB setcolorspace\n"
+		" << /ImageType 1 /Width %d /Height %d\n"
+		"    /ImageMatrix [ %d 0 0 -%d 0 %d ]\n"
+		DATASOURCE
+		"    /BitsPerComponent 8 /Decode [0 1 0 1 0 1]\n"
+		" >> xfig_image\n", pic->bit_size.x, pic->bit_size.y,
+			pic->bit_size.x, pic->bit_size.y, pic->bit_size.y);
+			/* gcc warned: %1$d not ISO C */
+
+#ifdef HAVE_ZLIB_H
+	if (deflate_ascii85encode(out, pic))
+		/* error messages already written by deflate_ascii85encode() */
+		exit(EXIT_FAILURE);
+#else
+	ascii85encode(out, pic->bitmap,
+				(size_t)pic->bit_size.x * pic->bit_size.y * 3);
+#endif
+	/* Output end of data marker for the ascii85 encoded stream */
+	fputs("~>\n", out);
+}
+
+static void
+indexed_image(FILE *out, F_pic *pic)
+{
+	int	i = 0;
+
+	fprintf(out,
+		"/Data currentfile /ASCII85Decode filter def\n"
+		"[ /Indexed /DeviceRGB %d\n <", pic->numcols - 1);
+	/* write the hex-encoded colormap */
+	fprintf(out, "%.2x%.2x%.2x", pic->cmap[RED][i], pic->cmap[GREEN][i],
+			pic->cmap[BLUE][i]); 
+	for (i = 1; i < pic->numcols; ++i) {
+		if (i % 11 == 0)
+			fputs("\n ", out);
+		fprintf(out, " %.2x%.2x%.2x", pic->cmap[RED][i],
+				pic->cmap[GREEN][i], pic->cmap[BLUE][i]); 
+	}
+	fputs(">\n] setcolorspace\n", out);
+	/* continue with image dictionary */
+	fprintf(out,
+		" << /ImageType 1 /Width %d /Height %d\n"
+		"    /ImageMatrix [ %d 0 0 -%d 0 %d ]\n"
+		DATASOURCE
+		"    /BitsPerComponent 8 /Decode [0 255]\n"
+		" >> xfig_image\n", pic->bit_size.x, pic->bit_size.y,
+			pic->bit_size.x, pic->bit_size.y, pic->bit_size.y);
+
+	deflate_ascii85encode(out, pic);
+	fputs("~>\n", out);
+}
+
+
+/***********************************/
+/* The main procedures start here. */
+/***********************************/
 
 void
 geneps_option(char opt, char *optarg)
@@ -1613,7 +1896,7 @@ genps_line(F_line *l)
 		if ((l->pic->subtype == P_XPM || l->pic->subtype == P_PCX ||
 			l->pic->subtype == P_PNG) && l->pic->numcols <= 256 &&
 			!psencode_header_done)
-		    PSencode_header();
+		    /* PSencode_header() FIXME*/;
 
 		/* If we have a GIF with a transparent color, we need the
 		   transparentimage code.  Actually, the GIF has been changed
@@ -1827,15 +2110,19 @@ genps_line(F_line *l)
 			    /* GIF, PNG and PCX */
 			    if (l->pic->numcols > 256) {
 				/* 24-bit image, write rgb values */
-				(void) PSrgbimage(tfp, img_w, img_h,
-					l->pic->bitmap);
+				    write_rgbimage(tfp, l->pic);
+				/*(void) PSrgbimage(tfp, img_w, img_h,
+					l->pic->bitmap); */
 			    } else {
 				/* now write out the image data in a
 				   compressed form */
-				(void) PSencode(img_w, img_h, l->pic->transp,
+				    indexed_image(tfp, l->pic);
+				/* (void) PSencode(img_w, img_h, l->pic->transp,
 					l->pic->numcols, l->pic->cmap[RED],
 					l->pic->cmap[GREEN], l->pic->cmap[BLUE],
-					l->pic->bitmap); }
+					l->pic->bitmap);
+				 */
+			    }
 			}
 
 		/* EPS file */
